setting limit on max-width for about banner to avoid overflow on mobile

--- a/wp-content/themes/sho_child/css/main.css
+++ b/wp-content/themes/sho_child/css/main.css
@@ -122,4 +122,5 @@ img.gym_side_image{
     display:block;
     margin-left:auto;
     margin-right:auto;
+    max-width:100%;
 }
